2000-08-04  Bart Schaefer  <schaefer@zsh.org>

	* 12516: Src/compat.c, Src/system.h, Src/Modules/files.c,
	Src/Modules/parameter.c: Rewrite the pathconf() support using a
	wrapper function in compat.c to isolate the #ifdefs.

2000-08-03  Peter Stephenson  <pws@csr.com>

	* Andrej: 12501: Src/params.c: getenv etc. become zgetenv etc.
	and call getenv where necessary.

2000-08-03  Sven Wischnowsky  <wischnow@zsh.org>

	* 12503: Completion/Commands/_bash_completions,
 	Completion/Commands/_complete_debug,
 	Completion/Commands/_complete_help,
 	Completion/Commands/_correct_word,
 	Completion/Commands/_expand_word,
 	Completion/Commands/_history_complete_word,
 	Completion/Commands/_next_tags, Completion/Core/_expand,
 	Completion/Core/_main_complete, Completion/Core/_path_files,
 	Completion/Core/compdump, Src/glob.c, Src/Modules/parameter.c:
	try to get quoting of special character (`>' and `\') right; fix
 	for pathmax in parameter.c
	
	* 12497: Doc/Zsh/builtins.yo: small fix for `read -r' doc
	
	* 12496: Completion/Core/_path_files: one more problem with
 	quoting of glob characters in filename completion
	
	* 12494: Doc/Zsh/options.yo, Src/Zle/zle_main.c: make binding of
 	^D be used in first column if ignoreeof is set and ^D is bound to
 	a shell function widget
	
2000-08-02  Peter Stephenson  <pws@csr.com>

	* Andrej: 12487: configure.in, Etc/MACHINES, Src/Makefile.in,
	Src/init.c, Src/main.c, Src/makepro.awk, Src/mkmakemod.sh,
	Src/parse.c, Src/zsh.h, Src/Zle/zle_utils.c: Dynamic loading
	on cygwin.

2000-08-02  Clint Adams  <schizo@debian.org>

        * 12489: Src/Modules/files.c, Src/Modules/parameter.c: check
	errno change from pathconf() in case of unlimited path length.

        * 12472: configure.in, Src/Modules/files.c,
	Src/Modules/parameter.c: use pathconf() instead
	of PATH_MAX if possible.

2000-08-02  Adam Spiers  <adam@spiers.net>

	* 12486: Completion/Base/{.distfiles,_cache_invalid,_retrieve_cache,